# vdj-stream

./: .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  START-DEBUG.bat  START.bat  STOP.bat  pyproject.toml
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
backend/app/: __init__.py  config.py  logging_config.py  main.py  models.py  update_checker.py
backend/app/db/: database.py  schema.sql
backend/app/search/: base.py  cache.py  chromium_youtube.py  ytdlp_search.py
backend/app/stream/: __init__.py  formats.py  naming.py  proxy.py  resolver.py
docs/: architecture.md  portable-tools.md
plugin/online-source/: VdjCompanionSource.vcxproj  build-and-install.ps1
plugin/online-source/src/: Main.cpp  VdjCompanionSource.cpp  VdjCompanionSource.h
plugin/sdk/: vdjOnlineSource.h
scripts/: bootstrap-tools.ps1  build-release.ps1  dev-shell.bat  install-playwright.bat  run-backend.bat  setup-and-start.ps1  smoke-test.bat  start-backend.ps1  stop-backend.ps1
tests/: test_app.py
